# Razi

./: .gitignore  Cargo.toml  README.md  Razi.toml  run_and_update.sh  runrelease.bat  runrelease.sh
src/: main.rs  razi_toml.rs  toml.rs
src/commands/: admin.rs  admins.rs  basic.rs  mod.rs  server.rs  servers.rs
src/misc/: mod.rs  tcpr.rs
src/settings/: toml.rs
