[package]
name = "razi"
version = "0.1.0"
authors = ["Vamist <Vamist@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.10.5", features = ["unstable_discord_api"] }
toml = "0.5.8"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.60"
isahc = "1.1.0"
chrono = "0.4.19"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
